# rust-autograder-setup

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  faq.html  index.html  installation.html  json-schema.html  print.html  quickstart.html  releases.html  repository-structure.html  searchindex.js  toc.html  toc.js
.autograder/: autograder.json  commit_count_1.sh
.github/workflows/: ci.yaml  deploy-book.yml  release.yaml
commands/: build.html  init.html  reset.html  table.html
docs-book/: book.toml
docs-book/.github/workflows/: deploy-mdbook.yml
docs-book/src/: README.md  SUMMARY.md  faq.md  installation.md  json-schema.md  quickstart.md  releases.md  repository-structure.md
docs-book/src/commands/: build.md  init.md  reset.md  table.md
src/: main.rs  types.rs  utils.rs
src/cli/: build.rs  cmdinit.rs  init.rs  mod.rs  tests.rs  textparsers.rs
src/cli/init/: functions.rs  mod.rs  scan.rs  tests.rs
src/cli/init/scan/: mod.rs  tests.rs
src/cli/reset/: mod.rs  tests.rs
src/cli/table/: mod.rs
src/types/: command_makers.rs  mod.rs
src/utils/: mod.rs  scripts.rs  tests.rs
tests/: autograder.json  main.rs
