[package]
name = "autograder-setup"
version = "2.2.4"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/JoeyRussoniello/rust-autograder-setup"
homepage = "https://joeyrussoniello.github.io/rust-autograder-setup/"
description = "Rust CLI that generates GitHub Classroom autograder workflows for Rust assignments."
keywords = ["education", "classroom", "autograder", "cli", "github-actions"]
categories = ["command-line-utilities", "command-line-interface", "development-tools::build-utils", "parsing"]

include = [
  "Cargo.toml",
  "LICENSE",
  "README.md",
  "src/**",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
cli-clipboard = "0.4.0"
markdown-tables = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2", features = ["full", "visit", "parsing"] }

[dev-dependencies]
tempfile = "3"
